# furiachat

./: .gitignore  LISENCE.md  README.md  app.py  pyproject.toml  requirements.txt
agents/: hltv_agents.py  hltv_agents_2.py  location_agent.py
furiachat/src/furiachat/: flow.py  main.py
furiachat/src/furiachat.egg-info/: SOURCES.txt  requires.txt
furiachat/src/furiachat/config/: agents.yaml  tasks.yaml
furiachat/src/furiachat/tools/: hltv_scraper.py  hltv_scraper_2.py
furiachat/utils/: excel_report.py  usage.py
leadprofile/: README.md  pyproject.toml
leadprofile/src/leadprofile/: crew.py  flow.py  main.py
leadprofile/src/leadprofile.egg-info/: PKG-INFO  top_level.txt
leadprofile/src/leadprofile/config/: agents.yaml  tasks.yaml
leadprofile/src/leadprofile/tools/: ddd_scraper.py
leadprofile/utils/: cost.py  usage.py
