[project]
name = "leadprofile"
version = "0.1.0"
description = "leadprofile using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.114.0,<1.0.0"
]

[project.scripts]
leadprofile = "leadprofile.main:run"
run_crew = "leadprofile.main:run"
train = "leadprofile.main:train"
replay = "leadprofile.main:replay"
test = "leadprofile.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
